implementation of config server